--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,12 @@
-/**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+
+.page-header{
+    display:flex;
+    justify-content:center;
+    border-bottom:2rpx solid #ccc;
+    margin-bottom:10rpx;
+}
+.page-header-text{
+    padding:20rpx 40rpx;
+    color:#999;
+    font-size:40rpx;
+}
