--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,42 @@
-/* index.wxss */
+.page-body{
+  display: flex;
+  flex-direction: colum;
+}
+.item{
+  display: flex;
+  border-bottom: 2rpx solid #eee;
+  padding: 20rpx 40rpx;
+}
+.item .poster{
+  width: 128rpx;
+  height: 128rpx;
+  margin-right: 30rpx;
+  justify-content: flex-start
+}
+.item .meta{
+  flex: 1;
+  justify-content: center;
+}
+.item .title{
+  display: block;
+  font-size: 32rpx;
+  margin-top: 6rpx;
+}
+.item .sub-title{
+  display: block;
+  font-size: 25rpx;
+  color: #c0c0c0;
+  margin-top: 12rpx;
+}
+.item .artists{
+  font-size: 25rpx;
+  color: #999;
+  margin-top: 15rpx;
+}
+.item .rating{
+  justify-content: flex-end;
+  align-self: center;
+  font-size: 28rpx;
+  font-weight: bold;
+  color: #ec3030
+}
